# mushin

./: .env.example  .gitignore  AGENTS.md  BRAND.md  CLAUDE.md  DEVELOPER_GUIDE.md  FRONTEND_PAGES.md  LICENSE  README.md  TOKENS.md  mushin-context.md  pyproject.toml  run.sh
.claude/: CLAUDE.md
.claude/agents/: auth-engineer.md  domain-engineer.md  schema-migrator.md  seed-author.md  test-engineer.md  ui-stylist.md  web-renderer.md
.claude/rules/: code-hygiene.md  git-commits.md  htmx.md  mobile-templates.md  python-backend.md  repo-wide.md  route-structure.md  svg-icons.md  tests.md  visibility.md  web-templates.md
.claude/skills/: README.md
.github/workflows/: deploy.yml
app/: main.py  ui_strings.py
app/auth/: __init__.py  oauth.py  passwords.py  routes.py  sessions.py  users.py
app/content/: __init__.py  guides.py  topic_hubs.py
app/middleware/: __init__.py  visitor_tracking.py
app/models/: db.py  migrate.py
app/routes/: _admin_handlers.py  admin.py  data_io.py  mobile.py  public.py  web.py
app/services/: _db.py  _search_discovery.py  admin_actions.py  admin_reports.py  categories.py  entries.py  (+19 more)
deploy/: run.sh
infra/: .gitkeep  backup.sh  mushin-backup.service  mushin-backup.timer  mushin-guest-reaper.service  mushin-guest-reaper.timer  mushin.caddy  mushin.service
mobile-client/: App.tsx  app.json  package.json
tests/: conftest.py  test_account_handlers.py  test_connections.py  test_entries_datetime.py  test_entry_form_context.py  test_health.py  test_history_stats.py  test_stats_heatmap.py  test_template_token_usage.py  test_visitors.py
(+443 files in other folders)
